# oxidize

./: Cargo.toml  TODO.md  test.ox
examples/: assign.ox  branch.ox  cond_expr.ox  condmove.ox  condstruct.ox  condtupmove.ox  deref.ox  foo.ox  immut.ox  lifetime.ox  loaded.ox  move_borrowed.ox  mut.ox  mutability_tuple.ox  partialmove.ox  ref.ox  smoothie.ox  smoved.ox  structpartialref.ox  try_mutating_imref.ox  tuple.ox  tuplemove.ox  wrapdrop.ox
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  typechecker.rs  types.rs
