[package]
name = "oxidize"
version = "0.1.0"
edition = "2021"
authors = ["Peter Chon <email>"]
description = ""
documentation = ""
homepage = ""
repository = "https://github.com/HelixAchaos/oxidize"
readme = "README.md"
keywords = []
categories = []
license = "MIT"


[dependencies]
chumsky = "0.8.0"
clap = { version = "3.2.17", features = ["derive"]}